# arg_parse

./: Cargo.toml  LICENCE  README.md
.github/workflows/: publish.yml  rust.yml
examples/: create_empty_parser.rs  long_options.rs  non_options.rs  short_options.rs
src/: config.rs  lib.rs  main.rs  parser.rs  result.rs
tests/: create_parser.rs  long_options.rs  non_options.rs  short_options.rs
