[package]
name = "arg_parse"
version = "0.3.0"
edition = "2021"
authors = ["Oxydemeton"]
description = "A tool to parse console or your own arguments, without dependencies."
license = "MIT"
readme = "README.md"
repository = "https://github.com/oxydemeton/arg_parse/"
keywords = ["tools", "cli", "args", "arguments"]
categories = ["development-tools", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
